# tea

./: AUTHORS  Makefile.am  README  autogen.sh  configure.ac
include/: Makefile.am  config.h.in  t_alloc.h  t_array.h  t_auto.h  t_bsearch.h  t_debug.h  t_hash.h  t_lex.h  t_parser.h  t_queue.h  t_re.h  t_set.h  t_slist.h  t_sort.h  t_types.h  t_utils.h  tea.h  template.h
src/: Makefile.am  t_auto.c  t_lex.c  t_parser.c  t_re.c  template.c
test/: Makefile.am  lex_test.c  parser_test.c  re_test.c  test.c
